# jax_nbody_emulator

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  old_run_jax_emulator.py  quick_start.py  run_jax_emulator.py  run_jax_emulator.slurm
src/jax_nbody_emulator/: __init__.py  cosmology.py  nbody_emulator.py  nbody_emulator_vel.py  style_blocks.py  style_blocks_vel.py  style_layers.py  style_layers_vel.py  subbox.py
tests/: test_cosmology.py  test_model.py  test_nbody_emulator.py  test_style_blocks.py  test_style_layers.py  test_subbox.py
