
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_nbody_emulator"
version = "0.1.0"
description = "A JAX-based neural network emulator for N-body cosmological simulations"
authors = [
    {name = "Drew Jamieson", email = "drew.s.jamieson@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["cosmology", "nbody", "neural-networks", "jax", "emulation"]

dependencies = [
    "jax>=0.4.0",
    "flax>=0.7.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "msgpack>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12_pip]>=0.4.0",
]
cuda11 = [
    "jax[cuda11_pip]>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/dsjamieson/jax_nbody_emulator"
Documentation = "https://jax_nbody_emulator.readthedocs.io"
Repository = "https://github.com/dsjamieson/jax_nbody_emulator"
Issues = "https://github.com/yourusername/jax_nbody_emulator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
#addopts = "--cov=src/nbody_emulator --cov-report=html --cov-report=term-missing"

[tool.setuptools.package-data]
jax_nbody_emulator = ["model_parameters/*.npz"]
